# serviceB/docs/swagger.json
@@ -8,8 +8,8 @@
     },
     "basePath": "/",
     "paths": {
-        "/get-temp": {
-            "get": {
+        "/consulta-tempo": {
+            "post": {
                 "description": "Consulta a temperatura atual baseada no CEP fornecido",
                 "consumes": [
                     "application/json"
@@ -23,11 +23,13 @@
                 "summary": "Consulta temperatura baseado no CEP",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "CEP",
-                        "name": "cep",
-                        "in": "query",
-                        "required": true
+                        "description": "Consulta temperatura",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/labs-two-serviceb_internal_entities.CepRequestDto"
+                        }
                     }
                 ],
                 "responses": {
@@ -54,6 +56,14 @@
         }
     },
     "definitions": {
+        "labs-two-serviceb_internal_entities.CepRequestDto": {
+            "type": "object",
+            "properties": {
+                "cep": {
+                    "type": "string"
+                }
+            }
+        },
         "labs-two-serviceb_internal_entities.CustomError": {
             "type": "object",
             "properties": {
